Removed missing images in analysis

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n",
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -39,8 +39,66 @@
     }
    ],
    "source": [
-    "dataset = pd.read_csv('./data/train.csv')\n",
+    "# dataset = pd.read_csv('./data/train.csv') # Gede's import\n",
+    "dataset = pd.read_csv(\"./data/recognition/train.csv\") # Basil's import\n",
     "print(dataset.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Images expected (Training): 1225029\n",
+      "Number of Images downloaded (Training): 1225027\n",
+      "Difference: 2\n",
+      "Missing Images:\n",
+      "id                                              10f06455b6a05d88\n",
+      "url            http://celebhot.hol.es/picture/static.panorami...\n",
+      "landmark_id                                                12914\n",
+      "Name: 723431, dtype: object\n",
+      "id                                              92423ea7db8ff3af\n",
+      "url            http://r2.bru02t11.c.bigcache.googleapis.com/s...\n",
+      "landmark_id                                                10895\n",
+      "Name: 792934, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "dir = \"/run/media/dekatria/My Passport/kaggle_dataset/google_recognition/train/\" # Basil's import\n",
+    "imgList = os.listdir(dir) \n",
+    "\n",
+    "print(\"Number of Images expected (Training): %s\" % (dataset.shape[0]))\n",
+    "print(\"Number of Images downloaded (Training): %s\" % len(imgList))\n",
+    "print(\"Difference: %s\" % (dataset.shape[0] - len(imgList)))\n",
+    "\n",
+    "print(\"Missing Images:\")\n",
+    "expImgList = [\"%s.jpg\" % x for x in range(dataset.shape[0])]\n",
+    "    \n",
+    "for i in list(set(expImgList)-set(imgList)):\n",
+    "    ind = int(i[:-4])\n",
+    "    print(dataset.iloc[ind])\n",
+    "dataset = dataset.drop(dataset.index[ind])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imgDim = []\n",
+    "for i in imgList:\n",
+    "    try:\n",
+    "        img = Image.open(dir + i)\n",
+    "        imgDim.append(img.size)\n",
+    "    except:\n",
+    "        imgDim.append((\"NA\",\"NA\"))\n",
+    "print(imgDim[:5])"
    ]
   },
   {
@@ -136,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -150,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
