Added cross validation to resize script

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -80,8 +80,8 @@
     }
    ],
    "source": [
-    "# dir = \"/run/media/dekatria/My Passport/kaggle_dataset/google_recognition/train/\" # Basil's import\n",
-    "# imgList = os.listdir(dir) \n",
+    "dir = \"/run/media/dekatria/My Passport/kaggle_dataset/google_recognition/train/\" # Basil's import\n",
+    "imgList = os.listdir(dir) \n",
     "\n",
     "print(\"Number of Images expected (Training): %s\" % (dataset.shape[0]))\n",
     "print(\"Number of Images downloaded (Training): %s\" % len(imgList))\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -318,8 +318,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>ee3fc0b24918daa5</td>\n",
-       "      <td>http://lh3.ggpht.com/-AEOt8LP_6GQ/SRWzr5OGXGI/...</td>\n",
+       "      <td>2198a4a61fb82fa6</td>\n",
+       "      <td>http://lh3.ggpht.com/-D7fzu6NN01c/R4ImXJLYmCI/...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -405,7 +405,7 @@
        "                      id                                                url  \\\n",
        "count            1224335                                            1224335   \n",
        "unique           1224335                                            1224335   \n",
-       "top     ee3fc0b24918daa5  http://lh3.ggpht.com/-AEOt8LP_6GQ/SRWzr5OGXGI/...   \n",
+       "top     2198a4a61fb82fa6  http://lh3.ggpht.com/-D7fzu6NN01c/R4ImXJLYmCI/...   \n",
        "freq                   1                                                  1   \n",
        "mean                 NaN                                                NaN   \n",
        "std                  NaN                                                NaN   \n",
@@ -429,7 +429,7 @@
        "max     1.495000e+04  7.937000e+03  7.072000e+03  4.499485e+07  "
       ]
      },
-     "execution_count": 240,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -646,6 +646,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset[\"file_name\"] = [\"%s.jpg\" % file for file in dataset.index.values]\n",
+    "dataset = dataset[(dataset.width >= 500) & (dataset.length >= 500)]\n",
+    "\n",
+    "# print(dataset[\"file_name\"])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -654,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +692,7 @@
     }
    ],
    "source": [
-    "data_freq = dataset[(dataset.width >= 500) & (dataset.length >= 500)].groupby('landmark_id').size().reset_index(name='counts')\n",
+    "data_freq = dataset.groupby('landmark_id').size().reset_index(name='counts')\n",
     "print('Maximum:', data_freq['counts'].max())\n",
     "print('Mean:', data_freq['counts'].mean())\n",
     "print('No. classes:', len(data_freq))\n",
@@ -705,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,10 +737,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Unnamed: 0                id  \\\n",
+      "count   7.479990e+05            747999   \n",
+      "unique           NaN            747999   \n",
+      "top              NaN  2198a4a61fb82fa6   \n",
+      "freq             NaN                 1   \n",
+      "mean    6.128570e+05               NaN   \n",
+      "std     3.536573e+05               NaN   \n",
+      "min     1.000000e+00               NaN   \n",
+      "25%     3.067810e+05               NaN   \n",
+      "50%     6.130600e+05               NaN   \n",
+      "75%     9.191665e+05               NaN   \n",
+      "max     1.225028e+06               NaN   \n",
+      "\n",
+      "                                                      url    landmark_id  \\\n",
+      "count                                              747999  747999.000000   \n",
+      "unique                                             747999            NaN   \n",
+      "top     http://lh3.ggpht.com/-D7fzu6NN01c/R4ImXJLYmCI/...            NaN   \n",
+      "freq                                                    1            NaN   \n",
+      "mean                                                  NaN    7284.905277   \n",
+      "std                                                   NaN    3942.373420   \n",
+      "min                                                   NaN       3.000000   \n",
+      "25%                                                   NaN    4190.000000   \n",
+      "50%                                                   NaN    6934.000000   \n",
+      "75%                                                   NaN   10184.000000   \n",
+      "max                                                   NaN   14937.000000   \n",
+      "\n",
+      "                width         length    pixelCount    file_name  \n",
+      "count   747999.000000  747999.000000  7.479990e+05       747999  \n",
+      "unique            NaN            NaN           NaN       747999  \n",
+      "top               NaN            NaN           NaN  1080030.jpg  \n",
+      "freq              NaN            NaN           NaN            1  \n",
+      "mean      1387.879779    1169.236250  1.663034e+06          NaN  \n",
+      "std        341.219927     297.346729  7.854617e+05          NaN  \n",
+      "min        500.000000     500.000000  2.500000e+05          NaN  \n",
+      "25%       1200.000000    1064.000000  1.700800e+06          NaN  \n",
+      "50%       1600.000000    1200.000000  1.920000e+06          NaN  \n",
+      "75%       1600.000000    1200.000000  1.920000e+06          NaN  \n",
+      "max       7937.000000    7072.000000  4.499485e+07          NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "test = pd.read_csv(\"./logs/train80.csv\")\n",
+    "print(test.describe(include=\"all\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
